--- a/style/main.css
+++ b/style/main.css
@@ -113,7 +113,8 @@
     background-color: #324151;
     color: #fff;
     height: 10vh;
-    padding: 200px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   .tooltip,
   .hider {
