--- a/style/mobile.less
+++ b/style/mobile.less
@@ -32,7 +32,8 @@ footer {
   background-color: @main_medium;
   color: #fff;
   height: 10vh;
-  padding: 200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .tooltip, .hider { visibility: hidden; display: none; }
 
